--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <img id="QRCodeImage" download="QR">
             
         </section>
+
+        <footer class="container">
+            Desenvolvido por: <a href="https://github.com/MarcoDevelop">Marco Miranda.</a>
+        </footer>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="script.js"></script>
