--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section>
             
-            <textarea maxlength="300" placeholder="Cole o link" tabindex="1" cols="30" rows="4"></textarea>
+            <textarea maxlength="300" placeholder="Cole o link" tabindex="1" cols="30" rows="4" id="textArea"></textarea>
 
             <button onclick="GerarQRCode()" class="button" style="vertical-align:middle"><span>Gerar QR Code </span></button>
             
