--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <h2>QR Code</h2>
 
-            <img id="QRCodeImage" download="QR">
+            <img id="QRCodeImage" download="QR" src="chart.png">
             
         </section>
 
