--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <footer class="container">
-            Desenvolvido por: <a href="https://github.com/MarcoDevelop">Marco Miranda.</a>
+            Desenvolvido por: <a href="https://github.com/MarcoDevelop">Marco Miranda</a>.
         </footer>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
